# PASC_inference

./: .gitignore  .gitmodules  CMakeCXXCompilerId_8cpp.html  CMakeLists.txt  LICENSE  Makefile  README.md  _formulas.tex  algebra_8h.html  algebra_8h__dep__incl.map  algebra_8h__dep__incl.md5  algebra_8h__incl.map  algebra_8h__incl.md5  algebra_8h_source.html  annotated.html  arrayoperation_8h.html  arrayoperation_8h__dep__incl.map  arrayoperation_8h__dep__incl.md5  arrayoperation_8h_source.html  bgmgraph_8h.html  bgmgraph_8h__dep__incl.map  bgmgraph_8h__dep__incl.md5  bgmgraph_8h_source.html  bgmgraphgrid1D_8h.html  bgmgraphgrid1D_8h__incl.map  bgmgraphgrid1D_8h__incl.md5  bgmgraphgrid1D_8h_source.html  bgmgraphgrid2D_8h.html  bgmgraphgrid2D_8h__dep__incl.map  bgmgraphgrid2D_8h__dep__incl.md5  bgmgraphgrid2D_8h__incl.map  bgmgraphgrid2D_8h__incl.md5  bgmgraphgrid2D_8h_source.html  blockdiaglaplace__explicit_8h.html  blockdiaglaplace__explicit_8h__dep__incl.map  blockdiaglaplace__explicit_8h__dep__incl.md5  blockdiaglaplace__explicit_8h__incl.map  blockdiaglaplace__explicit_8h__incl.md5  blockdiaglaplace__explicit_8h_source.html  blockgraphsparse_8h.html  (+1599 more)
examples/: CMakeLists.txt  benchmark1.cpp  benchmark1.cu  benchmark2.cu  edf.cpp  edf.cu  graph_test.cpp  graph_test.cu  old  projection_test.cpp  projection_test.cu  test_algebra.cpp  test_algebra.cu  test_cg.cu  test_filecrsmatrix.cu  test_kmeans.cu  test_laplacematrix.cu  test_varx.cu  tssolver_global.cpp  tssolver_global.cu  tssolver_global_kmeans.cpp  tssolver_global_kmeans.cu  tssolver_global_kmeans_large.cpp  tssolver_global_kmeans_large.cu  tssolver_global_kmeansoooo.cu  tssolver_global_varx.cpp  tssolver_global_varx.cu
examples/gui/: gui.cmake  gui_show_eeg.cpp  gui_show_gamma.cpp  gui_show_image.cpp  gui_show_movie.cpp  gui_show_neuro.cpp  gui_show_shortinfo.cpp  gui_show_signal2D.cpp  gui_show_vec.cpp
examples/gui/include/: graphplotter.h  shortinfo_reader.h
examples/include/: kmeans2D.h  kmeans3D.h  varx.h  varx1D.h  varx2D.h
examples/scripts/: anselm_interactive_1nodes_gpu.pbs  common_batch.py  concatenate_shortinfo.py  myscripts.py
examples/scripts/anselm/: common_pbs.py
examples/scripts/daint/: common_batch.py
examples/test_classes/: test_classes.cmake  test_consolearg.cpp  test_consoleoutput.cpp  test_logging.cpp  test_memorycheck.cpp  test_offset.cpp  test_shortinfo.cpp  test_timer.cpp
examples/test_classes/algebra/: test_bgmgraph.cu  test_blockgraphsparsematrix.cu  test_dot.cpp  test_dot.cu
examples/test_classes/common/: test_globalmanager.cpp
examples/test_classes/dlib/: test_anna.cpp  test_gui.cu  test_integral.cpp  test_integral.cu
examples/test_classes/petscvector/: test_classes.cmake
examples/test_classes/seqarrayvector/: test_classes.cmake
examples/test_edf/: test_edf.cmake  test_edf.cpp  test_edf.cu  test_edf2.cpp  test_edf2.cu
examples/test_edf/paraview/: Kmeans3D_solution_gamma.pvsm
examples/test_edf/scripts/: example_gpu.py
examples/test_entropy/: test_entropy.cmake  test_entropy.cpp  test_entropy.cu
examples/test_entropy/data/: big_test.csv  data3_y_0_1.csv  data3d_0_1.csv  tinydata.csv  xt_1lag.csv  xt_2l.csv
examples/test_entropy/scripts/: daint_batch_strong.py  daint_batch_weak.py  error_1e-3.batch  error_1e-4.batch  error_1e-5.batch  runme_test_entropy  runme_test_entropy_xdim2  runme_test_tiny
examples/test_image/: test_image.cmake  test_image.cpp  test_image.cu  test_image_ts.cpp  test_image_ts.cu
examples/test_image/scripts/: alzheimer.py  anselm_qexp_2gpu.pbs  example_cpu.py  example_gpu.py  example_illia_image_gpu.py  image_generate.py  loremipsum_epssqr.batch  loremipsum_strong.py  myscripts.py  runme_illia_avatar  runme_illia_avatar_fem  runme_image  runme_lugano  runme_pasc  runme_seq  runme_usi_text
examples/test_kmeans/: test_kmeans.cmake  test_kmeans.cu  test_kmeans_generate.cpp  test_kmeans_large.cpp  test_kmeans_large.cu  test_kmeans_load.cpp  test_kmeans_load.cu  test_kmeans_simplify.cpp
examples/test_kmeans/include/: kmeans3D.h
examples/test_kmeans/results/: kmeans_load_cpu.txt  kmeans_load_gpu.txt  shortinfo_cpu2.txt  shortinfo_cpu3.txt  shortinfo_cpu4.txt  shortinfo_cpu5.txt  (+4 more)
examples/test_movie/: test_movie.cmake  test_movie.cpp  test_movie_generate_3dot.cpp  test_movie_generate_dot.cpp
examples/test_neuro/: test_edf.cu  test_edf2.cu  test_neuro.cmake  test_neuro.cpp  test_neuro.cu
examples/test_other/: test_decomposition.cpp  test_decomposition.cu  test_graph.cpp  test_graph.cu  test_mat_blockgraph_free_to_dense.cpp  test_mat_blockgraph_free_to_dense.cu  test_mat_blocklaplace_free_to_dense.cpp  test_mat_blocklaplace_free_to_dense.cu  test_mat_free_to_dense.cpp  test_mat_free_to_dense.cu  test_mat_seq_vs_mpi.cpp  test_mat_seq_vs_mpi.cu  test_mat_to_dense.cu  test_metis.cpp  test_metis.cu  test_other.cmake  test_projection.cu
examples/test_signal/: test_signal.cmake  test_signal.cpp  test_signal1D.cpp  test_signal1D_generate.cpp  test_signal2D_generate.cpp  test_signal_fuzzykmeans.cpp
examples/test_signal1D/: test_signal1D.cmake  test_signal1D.cpp  test_signal1D.cu  test_signal1D_generate.cpp
examples/test_util/: diff_norm_vec.cpp  gui_show_vec.cpp  precision.cpp  show_vec.cpp  stat_vec.cpp  test_util.cmake
examples/test_varx/: test_varx.cmake  test_varx_large.cpp  test_varx_large.cu
examples/util/: diff_norm_vec.cpp  gui_show_gamma.cpp  gui_show_image.cpp  gui_show_vec.cpp  precision.cu  process_log.cpp  stat_vec.cpp  util.cmake  util_csv_to_vec.cpp  util_diff_norm_vec.cpp  util_dlib_image_to_vec.cpp  util_dlib_seqimage_to_vec.cpp  util_dlib_vec_to_image.cpp  util_print_vec.cpp  util_process_log.cpp  util_stat_vec.cpp
src/boost/: CMakeLists.txt  options.cpp
src/general/: CMakeLists.txt  arrayoperation.cpp  options.cpp
src/petsc/: CMakeLists.txt
src/petscvector/: CMakeLists.txt
tests/: CMakeLists.txt  mymatrix.mat  test_algebra.cu  test_cg.cu  test_filecrsmatrix.cu  test_kmeans.cu  test_laplacematrix.cu  test_matlabmatrix.cu  test_problem.cu  test_spgqp.cu
util/simpleview/: CMakeLists.txt  simpleview.cpp
(+1156 files in other folders)
